fix(exceptions): catch specific error instead of broad